Fix visibility of altitude chart in mobile view

--- a/webapp/src/app/_components/map/map.component.css
+++ b/webapp/src/app/_components/map/map.component.css
@@ -160,6 +160,7 @@ td {
   width: 100vw;
   pointer-events: none;
   transform: scale(2);
+  visibility: hidden;
 }
 
 #cesium-map {
